# asseme-backend

./: .gitignore  Cargo.toml  MSP_DATABASE_GUIDE.md  SIGNIN_HANDLER_README.md  diesel.toml  frontend-websocket-test.html
.certs/: cert.pem  key.pem
agent/linux/: Cargo.toml  config.toml
agent/linux/src/: main.rs
config-agent/: Cargo.toml
config-agent/src/: api.rs  lib.rs  logging.rs  settings.rs
config-server/: Cargo.toml
config-server/src/: api.rs  lib.rs  (+1 more)
database/: Cargo.toml  README.md
database-agent/: Cargo.toml
database-agent/migrations/2025-12-05-183739-0000_connection_strings/: up.sql
database-agent/migrations/2025-12-06-184849-0000_events_table/: up.sql
database-agent/migrations/2025-12-07-041202-0000_function_hashes_table/: up.sql
database-agent/migrations/2025-12-07-051505-0000_properties/: up.sql
database-agent/src/: common.rs  database.rs  lib.rs  schema.rs  table_connection_string.rs  traits.rs
database-agent/src/models/: connection_strings.rs  function_hashes.rs  mod.rs  tags.rs
database-agent/src/models/properties/: mod.rs  repository.rs  types.rs
database-agent/src/records/: mod.rs  property.rs
database-agent/src/tables/: connection_string.rs  mod.rs  property.rs
database/migrations/: 20251102_112248_roles.surql  20251102_112404_tenants.surql  20251102_112454_msp_customer_relationships.surql  20251102_112519_users.surql  20251102_112552_user_roles.surql  20251102_154110_access.surql
database/migrations/definitions/: 20251102_154110_access.json  _initial.json
database/schemas/: billing.surql  functions_signin.surql  functions_signup.surql  msp_customer_relationship.surql  role.surql  tenant.surql  token.surql  user.surql  user_role.surql
database/src/: context.rs  lib.rs
database/src/model/: billing.rs  mod.rs  msp_customer_relationship.rs  role.rs  tenant.rs  token.rs  user.rs  user_role.rs
database/src/repository/: mod.rs
database/src/repository/tenant/: repository.rs
database/src/repository/user/: repository.rs
database/src/repository/user_role/: repository.rs
db_scripts/: create_msp_tables.sql
examples/: msp_models_example.rs
models/: Cargo.toml
models-agent/: Cargo.toml
models-server/: Cargo.toml
runtime-agent/: Cargo.toml
runtime-agent/src/: lib.rs
runtime-agent/src/actors/: mod.rs
runtime-agent/src/actors/api/: actor.rs  messages.rs  mod.rs  pagination.rs  state.rs
runtime-agent/src/actors/api/routes/: mod.rs
runtime-agent/src/actors/api/routes/v1/: errors.rs  mod.rs  responses.rs
runtime-agent/src/actors/api/routes/v1/handlers/: connection_strings.rs  function_hashes.rs  info.rs  mod.rs  properties.rs
runtime-agent/src/actors/api/routes/v1/routes/: connection_strings.rs  function_hashes.rs  info.rs  mod.rs  properties.rs
runtime-agent/src/actors/connection_manager/: connection_string.rs  mod.rs
runtime-agent/src/actors/controller/: actor.rs  arguments.rs  messages.rs  mod.rs  state.rs
runtime-server/: Cargo.toml
runtime-server/src/: lib.rs
runtime-server/src/actors/api/: actor.rs  cors.rs  messages.rs  mod.rs  state.rs  utils.rs
runtime-server/src/actors/api/jwt/: mod.rs
runtime-server/src/actors/api/v1/: api_response.rs  errors.rs  jwt.rs  mod.rs  responses.rs
runtime-server/src/actors/api/v1/handlers/: info.rs  mod.rs
runtime-server/src/actors/api/v1/handlers/agent/: mod.rs  protocol.rs  types.rs
runtime-server/src/actors/api/v1/routes/: agent.rs  info.rs  mod.rs
runtime-server/src/actors/controller/: actor.rs  arguments.rs  mod.rs  state.rs
runtime-shared/: Cargo.toml
runtime-shared/src/: lib.rs
runtime-shared/src/api_server/: error.rs  mod.rs
runtime-shared/src/logging/: mod.rs
runtime-shared/src/properties/: folders.rs  mod.rs
server/: Cargo.toml
server-config/: Cargo.toml  README.md
server-config-loaders/: Cargo.toml
server-config-loaders/src/: env_loader.rs
server-config/src/: api.rs  cors.rs  database.rs  lib.rs  logging.rs
server-runtime/: Cargo.toml
server-runtime/src/: common.rs  folders.rs  lib.rs  logging.rs  properties.rs
server-runtime/src/actors/: mod.rs
server-runtime/src/actors/api/: actor.rs  cors.rs  errors.rs  messages.rs  mod.rs  startup.rs  state.rs  types.rs  utils.rs
server-runtime/src/actors/api/api_handlers/: api.rs  misc.rs  mod.rs  types.rs
server-runtime/src/actors/api/api_handlers/agent/: api.rs  mod.rs
server-runtime/src/actors/api/api_handlers/auth/: mod.rs  routes.rs
server-runtime/src/actors/api/api_handlers/auth/signin/: handlers.rs  types.rs
server-runtime/src/actors/api/api_handlers/auth/signup/: handlers.rs  types.rs
server-runtime/src/actors/api/api_handlers/tenant/: mod.rs
server-runtime/src/actors/api/api_handlers/tenant/add/: handlers.rs  mod.rs  types.rs
server-runtime/src/actors/api/handlers/: auth_handlers.rs  misc_handlers.rs  mod.rs
server-runtime/src/actors/api/middleware/: authentication.rs  mod.rs  permissions.rs
server-runtime/src/actors/api/models/: errors.rs  mod.rs
server-runtime/src/actors/api/models/api/: auth_requests.rs  mod.rs  responses.rs
server-runtime/src/actors/api/models/service/: auth_models.rs  mod.rs
server-runtime/src/actors/api/repositories/: auth_repository.rs  mod.rs
server-runtime/src/actors/api/routes/: mod.rs  routes.rs
server-runtime/src/actors/api/routes/v1/: auth_routes.rs  misc_routes.rs  mod.rs
server-runtime/src/actors/api/services/: auth_service.rs  email_service.rs  mod.rs
server-runtime/src/actors/api/v1/: mod.rs
server-runtime/src/actors/api/v1/handlers/: info.rs  mod.rs
server-runtime/src/actors/api/v1/handlers/agent/: mod.rs
server-runtime/src/actors/api/v1/routes/: info.rs  mod.rs
server-runtime/src/actors/controller/: actor.rs  arguments.rs  messages.rs  mod.rs  state.rs
server-runtime/src/common/: bootstrap.rs  mod.rs
server-runtime/src/controller/: messages.rs  mod.rs  state.rs
server-runtime/src/logging/: mod.rs
server-runtime/src/properties/: files.rs  mod.rs
server-runtime/tests/: properties.rs  startup.rs
server/linux/: Cargo.toml
server/linux/src/: main.rs
server/src/: main.rs
(+2 files in other folders)
