[workspace]
# Using the latest resolver for dependency resolution
resolver="2"

# Members of this project workspace
members = ["server", "server-config", "server-runtime"]

# Exluded from this project workspace
exclude = []

# Packages to operate on when a specific package wasn't selected
default-members = ["server"]

# Override properties for each package in the workspace
[workspace.package]
authors = ["David Graupner"]
homepage = "https://www.asseme.net"
categories = ["command-line-utilities"]
edition="2021"
license-file = "LICENSE"
rust-version="1.90.0"
repository = "https://github.com/asseme"

[workspace.metadata.release]
changelog = "CHANGELOG.md"
