[workspace]
# Using the latest resolver for dependency resolution
resolver="2"

# Members of this project workspace
members = ["agent/linux","models-server","config-server", "server-config-loaders", "runtime-server", "server/linux", "runtime-shared",  "runtime-agent", "models-agent", "database-agent"]

# Exluded from this project workspace
exclude = []

# Packages to operate on when a specific package wasn't selected
default-members = ["server/linux"]

# Override properties for each package in the workspace
[workspace.package]
authors = ["David Graupner"]
homepage = "https://asseme.dev.dagdev.net"
categories = ["command-line-utilities"]
edition="2021"
license-file = "LICENSE"
rust-version="1.91.0"
repository = "https://github.com/davidgraupner2/asseme-backend"

[workspace.metadata.release]
changelog = "CHANGELOG.md"
