[package]
name = "database-agent"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled", "limits"] }
deadpool = "0.12.0"
deadpool-sqlite = "0.12.0"
tracing = "0.1.41"
anyhow="1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json="1.0"