[package]
name = "database-agent"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
diesel = { version = "2.3.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35","r2d2"] }
diesel-derive-enum = {version="2.1.0", features=["sqlite"]}
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
diesel_migrations = "2.3.1"
tracing = "0.1.41"
tokio = { version = "1.21", default-features = false, features = [ "rt-multi-thread" ] }
anyhow = "1.0.100"
serde = { version = "1.0", features = ["derive"] }