[package]
name = "database"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = "1.0"
thiserror="2.0"
anyhow="1.0"
tracing = "0.1.41"
server-config={path="../server-config"}
surrealdb={version="2.3",features = []}
chrono = { version = "0.4", features = ["serde"] }
