[package]
name = "runtime-agent"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
ractor="0.15"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version="0.3.20", features = ["std", "json","ansi","env-filter","fmt","local-time"]}
runtime-shared = { path = "../runtime-shared" }
database-agent = { path = "../database-agent" }
config-agent = { path = "../config-agent" }
once_cell="1.21"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"