[package]
name = "runtime-server"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
sysinfo = "0.37.2"
machineid-rs="1.2.4"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version="0.3.20", features = ["std", "json","ansi","env-filter","fmt","local-time"]}
ractor="0.15"
rustls = { version = "0.23", features = ["ring"] }
axum = { version = "0.8", features = ["macros","ws","tokio","http2"] }
tower-http={version="0.6", features = ["trace","request-id","compression-gzip","timeout"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
config-server={path="../config-server"}
axum-server= {version="0.7", features = ["tls-rustls"]}
tower_governor="0.8"
tower="0.5"
futures-util ="0.3"
dashmap="6.1"
chrono="0.4"
futures="0.3"
uuid="1.18"
runtime-shared = { path = "../runtime-shared" }