[package]
name = "server-config-loaders"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
dotenvy="0.15"
server-config = { path = "../server-config" }