[package]
name = "server-config"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tracing = "0.1.41"