[package]
name = "server-config"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
axum = { version = "0.8", features = ["http1"] }