[package]
name = "server-runtime"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros","ws"] }
tower-http={version="0.6", features = ["trace","request-id","compression-gzip","timeout"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
thiserror="2.0"
anyhow="1.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version="0.3.19", features = ["json"]}
ractor="0.15"
server-config={path="../server-config"}
database={path="../database"}
gethostname = "1"
machineid-rs = "1.2"
surrealdb={version="2.3",features = []}
chrono = { version = "0.4", features = ["serde"] }
semver = "1"
rustls = { version = "0.23", features = ["ring"] }
axum-server= {version="0.7", features = ["tls-rustls"]}
futures-util ="0.3"
http-body-util="0.1"
bytes="1.10"
tower="0.5"