[package]
name = "server-runtime"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
sysinfo = "0.37.2"
machineid-rs="1.2.4"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = {version="0.3.20", features = ["json","ansi","env-filter","fmt","local-time"]}
ractor="0.15"
rustls = { version = "0.23", features = ["ring"] }