[package]
name = "agent-linux"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
runtime-shared = { path = "../../runtime-shared" }
runtime-agent = { path = "../../runtime-agent" }
config-agent = { path = "../../config-agent" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing="0.1.41"
tracing-subscriber={version="0.3.20", features=["env-filter","json"]}
tracing-appender = "0.2.3"
ractor="0.15"
config="0.15"