[package]
name = "linux"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
server-config = { path = "../../server-config" }
server-runtime = { path = "../../server-runtime" }
server-config-loaders = { path = "../../server-config-loaders" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing="0.1.41"
tracing-subscriber={version="0.3.20", features=["env-filter","json"]}
tracing-appender = "0.2.3"
# sysinfo = "0.37.2"