[package]
name = "server-linux"
version = "0.1.0"
authors.workspace = true
homepage.workspace = true
categories.workspace = true
edition.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
config-server = { path = "../../config-server" }
runtime-server = { path = "../../runtime-server" }
runtime-shared = { path = "../../runtime-shared" }
server-config-loaders = { path = "../../server-config-loaders" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing="0.1.41"
tracing-subscriber={version="0.3.20", features=["env-filter","json"]}
tracing-appender = "0.2.3"
ractor="0.15"